# jpeditor-web

./: .gitignore  CLAUDE.md  README.md  bench-lyrics.mjs  cmp-lines.mjs  gen-lyric-doc.mjs  index.html  measure-all.mjs  measure-musicpp.mjs  package-lock.json  package.json  shot-recog.mjs  shot.mjs  vite.config.ts
.github/workflows/: build.yml
docs/: macOS-打不开.md  开发.md  技术栈.md  进度.md
public/: llms.txt  robots.txt  sitemap.xml
scripts/: release.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/common/: asset.ts  fraction.ts  geom.ts  measure.ts
src/editor/: app.ts  dialogs.ts  export.ts  fileio.ts  help.ts
src/jpword/: Jpwabc.g4  jpwfile.ts  parse.ts
src/jpword/parser/: JpwabcLexer.ts  JpwabcListener.ts  JpwabcParser.ts  JpwabcVisitor.ts
src/layout/: font.ts  layout.ts  painter.ts
src/mixed/: loader.ts  model.ts  painter.ts  pao.ts  render.ts
src/omr/: decode.ts  header.ts  index.ts  jianpu.ts  lyrics.ts  musicxml.ts  ocr.ts  overlay.ts  paddleocr.ts  preprocess.ts  recognize.ts  types.ts
src/score/: enums.ts  jpscore.ts  jpwimport.ts  musicxml.ts  phrase.ts  score.ts
src/smufl/: smufl.ts
