[package]
name = "jpeditor"
version = "0.4.4"
description = "简谱编辑器"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jpeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svg2pdf = "0.13"
lopdf = "0.41"
# 简谱 OMR：桌面版数字/文本 OCR 推理走原生 onnxruntime（比浏览器 wasm 多线程快 ~3×，且不受
# WebKit 多线程 wasm worker 挂死影响）。TS 端把预处理好的张量经二进制 IPC 交来跑 session.run。
ort = "2.0.0-rc.12"
bytemuck = "1"

# macOS 原生 MIDI 播放：AVFoundation 的 AVMIDIPlayer（系统内置 DLS GM 音源），音色比前端采样器丰满。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-avf-audio = { version = "0.3", features = ["AVMIDIPlayer"] }
